--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
     "bootstrap": "^4.6.0",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-avatar": "^3.10.0",
     "react-bootstrap": "^1.5.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "unique-names-generator": "^4.4.0",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
