--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "react-avatar": "^3.10.0",
     "react-bootstrap": "^1.5.0",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "socket.io": "^3.1.1",
     "unique-names-generator": "^4.4.0",
     "web-vitals": "^1.1.0"
